--- a/RankFit/Rank/Rank.storyboard
+++ b/RankFit/Rank/Rank.storyboard
@@ -11,7 +11,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--My Rank View Controller-->
+        <!--랭킹-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController storyboardIdentifier="MyRankViewController" id="Y6W-OH-hqX" customClass="MyRankViewController" customModule="RankFit" customModuleProvider="target" sceneMemberID="viewController">
@@ -28,7 +28,7 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" id="bB6-e0-oYK">
+                                <activityIndicatorView key="backgroundView" hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" id="63k-iI-7TJ">
                                     <rect key="frame" x="0.0" y="-91" width="390" height="761"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="color" systemColor="systemOrangeColor"/>
@@ -176,7 +176,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="tDP-4g-ewN" secondAttribute="bottom" id="vdn-VQ-nrN"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="trophy" id="WLX-Im-MiT"/>
+                    <tabBarItem key="tabBarItem" title="랭킹" image="trophy" id="WLX-Im-MiT"/>
                     <navigationItem key="navigationItem" id="iRh-dj-g6s">
                         <barButtonItem key="rightBarButtonItem" style="done" id="YUY-ck-KRl">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="8X4-GH-TK3">
@@ -203,7 +203,7 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="collectionView" destination="tDP-4g-ewN" id="EYq-D5-Rp5"/>
-                        <outlet property="indicator" destination="bB6-e0-oYK" id="P5Y-E2-ad6"/>
+                        <outlet property="indicator" destination="63k-iI-7TJ" id="eXD-Nu-Qey"/>
                         <outlet property="optionButton" destination="8X4-GH-TK3" id="y3n-i0-yJS"/>
                     </connections>
                 </viewController>
@@ -211,11 +211,13 @@
             </objects>
             <point key="canvasLocation" x="987.69230769230762" y="-34.123222748815166"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--랭킹-->
         <scene sceneID="jK0-q0-eU5">
             <objects>
                 <navigationController storyboardIdentifier="initialRank" automaticallyAdjustsScrollViewInsets="NO" id="zt3-Sh-PpC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="랭킹" image="trophy" id="VbZ-LR-MiF"/>
                     <toolbarItems/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="D0u-zk-2km">
                         <rect key="frame" x="0.0" y="47" width="390" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
